# BotwaChat

./: .gitattributes  .gitignore  .gitleaks.toml  README.md  main.cjs  main.mjs  package-lock.json  package.json  publish_installer_remote.sh  tsconfig.base.json
.github/: SECURITY.md
.github/workflows/: security.yml
.tools/: catwa.conf.remote  cf_dynamic_rules.json  remote_deploy_apply.sh  remote_inspect_nginx.sh  remote_update_server_env.sh
apps/desktop/: .env.example  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.cjs  main.mjs  preload.cjs  preload.mjs
apps/desktop/public/: manifest.webmanifest  offline.html  sw.js
apps/desktop/scripts/: build-release.mjs  check-mojibake.mjs  generate-electron-installer-theme.ps1  generate-installer-theme.ps1  generate-update-manifest.mjs  publish-electron-updates.mjs  publish-updates.mjs  run-electron.cjs
apps/desktop/src/: App.tsx  globals.d.ts  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/config/: release.stable.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/icons/installer/: README.md
apps/desktop/src-tauri/keys/: README.md  catwa.updater.key.pub
apps/desktop/src-tauri/src/: main.rs
apps/server/: .env.example  Makefile  README.md  go.mod  go.sum
docs/: architecture.md  design-system.md  distribution.md  marketing.md  ui-template-attribution.md
scripts/cloudflare/: purge_cache.sh  setup_catwa.ps1  setup_catwa.sh
(+156 files in other folders)
