[package]
name = "catwa-desktop"
version = "0.1.14"
description = "Catwa Desktop"
authors = ["Catwa Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
keyring = "3"
base64 = "0.22"
xcap = "0.7"
